refac: Rework CI/CD to selectively build/test/publish the packages
The default behaviour does not change: a pipeline with the default
values (all versions to `master`) will build, test and potentially
publish all packages.

However on demand, by setting any of the packages versions to empty
string, these won't be built/tested/published. This allows for release
builds were only one or a subset of packages are needed.

Two main changes:
* On the test level, mark all tests with per-package markers and add
  some logic in the collection of tests to skip the once we don't have
  version information about
* On the CI/CD level, refactor the whole pipeline to produce CI jobs per
  package. This seems like an overkill but the explicitness of it is
  preferable to complex alternatives such a dynamic pipelines.

Ticket: QA-689

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -12,3 +12,14 @@ markers =
     min_mender_gateway_version: Required version of mender-gateway to run the test
     cppclient: Tests for the C++ client implementation
     golangclient: Tests for the golang client implementation
+    mender_client: Tests for mender-client package
+    mender_artifact: Tests for mender-artifact package
+    mender_connect: Tests for mender-connect package
+    mender_configure: Tests for mender-configure package
+    mender_artifact: Tests for mender-artifact package
+    mender_app_update_module: Tests for mender-app-update-module package
+    mender_setup: Tests for mender-setup package
+    mender_snapshot: Tests for mender-snapshot package
+    mender_flash: Tests for mender-flash package
+    mender_gateway: Tests for mender-gateway package
+    mender_monitor: Tests for mender-monitor package
