--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,7 +93,7 @@ include:
     matrix:
       - BUILD: crosscompile
         DISTRO: debian
-        RELEASE: [bullseye, bookworm]
+        RELEASE: [bullseye, bookworm, trixie]
         ARCH: [amd64, armhf, arm64]
       - BUILD: crosscompile
         DISTRO: ubuntu
@@ -104,7 +104,7 @@ include:
     matrix:
       - BUILD: crosscompile
         DISTRO: debian
-        RELEASE: [bullseye, bookworm]
+        RELEASE: [bullseye, bookworm, trixie]
         ARCH: [amd64, arm64]
       - BUILD: crosscompile
         DISTRO: ubuntu
@@ -400,7 +400,7 @@ test:install-script:
     reports:
       junit: scripts/tests/results.xml
 
-test:pkgs:workstation-tools:
+test:pkgs:workstation-tools:bookworm:
   stage: test
   tags:
     - hetzner-amd-beefy
@@ -418,6 +418,27 @@ test:pkgs:workstation-tools:
     - test -x /usr/bin/mender-artifact
     - mender-artifact --version
     - apt -y install ${CI_PROJECT_DIR}/output/opensource/debian-bookworm-amd64/mender-cli*.deb
+    - test -x /usr/bin/mender-cli
+    - mender-cli --version
+
+test:pkgs:workstation-tools:trixie:
+  stage: test
+  tags:
+    - hetzner-amd-beefy
+  needs:
+    - 'build:pkgs:workstation-tools: [crosscompile, debian, trixie, amd64]'
+  rules:
+    - if: $CI_COMMIT_BRANCH == "production"
+      when: never
+    - if: '$TEST_MENDER_DIST_PACKAGES == "true" && $MENDER_VERSION =~ /^[456789]\.[0-9x]\.[0-9x]/'
+    - if: '$TEST_MENDER_DIST_PACKAGES == "true" && $MENDER_VERSION == "master"'
+  image: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/debian:13
+  script:
+    - apt-get update
+    - apt -y install ${CI_PROJECT_DIR}/output/opensource/debian-trixie-amd64/mender-artifact*.deb
+    - test -x /usr/bin/mender-artifact
+    - mender-artifact --version
+    - apt -y install ${CI_PROJECT_DIR}/output/opensource/debian-trixie-amd64/mender-cli*.deb
     - test -x /usr/bin/mender-cli
     - mender-cli --version
 
@@ -441,6 +462,9 @@ test:pkgs:workstation-tools:
     - 'build:pkgs:device-components: [crosscompile, debian, bookworm, amd64]'
     - 'build:pkgs:device-components: [crosscompile, debian, bookworm, arm64]'
     - 'build:pkgs:device-components: [crosscompile, debian, bookworm, armhf]'
+    - 'build:pkgs:device-components: [crosscompile, debian, trixie, amd64]'
+    - 'build:pkgs:device-components: [crosscompile, debian, trixie, arm64]'
+    - 'build:pkgs:device-components: [crosscompile, debian, trixie, armhf]'
     - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, amd64]'
     - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, armhf]'
     - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, arm64]'
@@ -476,6 +500,8 @@ publish:s3:device-components:automatic:
     - 'build:pkgs:workstation-tools: [crosscompile, debian, bullseye, arm64]'
     - 'build:pkgs:workstation-tools: [crosscompile, debian, bookworm, amd64]'
     - 'build:pkgs:workstation-tools: [crosscompile, debian, bookworm, arm64]'
+    - 'build:pkgs:workstation-tools: [crosscompile, debian, trixie, amd64]'
+    - 'build:pkgs:workstation-tools: [crosscompile, debian, trixie, arm64]'
     - 'build:pkgs:workstation-tools: [crosscompile, ubuntu, jammy, amd64]'
     - 'build:pkgs:workstation-tools: [crosscompile, ubuntu, jammy, arm64]'
     - 'build:pkgs:workstation-tools: [crosscompile, ubuntu, noble, amd64]'
@@ -540,6 +566,9 @@ publish:production:s3:scripts:install-mender-sh:
     - 'build:pkgs:device-components: [crosscompile, debian, bookworm, amd64]'
     - 'build:pkgs:device-components: [crosscompile, debian, bookworm, arm64]'
     - 'build:pkgs:device-components: [crosscompile, debian, bookworm, armhf]'
+    - 'build:pkgs:device-components: [crosscompile, debian, trixie, amd64]'
+    - 'build:pkgs:device-components: [crosscompile, debian, trixie, arm64]'
+    - 'build:pkgs:device-components: [crosscompile, debian, trixie, armhf]'
     - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, amd64]'
     - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, armhf]'
     - 'build:pkgs:device-components: [crosscompile, ubuntu, jammy, arm64]'
