--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -400,47 +400,45 @@ test:install-script:
     reports:
       junit: scripts/tests/results.xml
 
-test:pkgs:workstation-tools:bookworm:
+.test:pkgs:workstation-tools:
+  variables:
+    DEBIAN_VERSION: 12
+    DEBIAN_VERSION_NAME: "bookworm"
   stage: test
   tags:
     - hetzner-amd-beefy
   needs:
-    - 'build:pkgs:workstation-tools: [crosscompile, debian, bookworm, amd64]'
+    - 'build:pkgs:workstation-tools: [crosscompile, debian, amd64]'
   rules:
     - if: $CI_COMMIT_BRANCH == "production"
       when: never
     - if: '$TEST_MENDER_DIST_PACKAGES == "true" && $MENDER_VERSION =~ /^[456789]\.[0-9x]\.[0-9x]/'
     - if: '$TEST_MENDER_DIST_PACKAGES == "true" && $MENDER_VERSION == "master"'
-  image: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/debian:12
+  image: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/debian:${DEBIAN_VERSION}
   script:
     - apt-get update
-    - apt -y install ${CI_PROJECT_DIR}/output/opensource/debian-bookworm-amd64/mender-artifact*.deb
+    - apt -y install ${CI_PROJECT_DIR}/output/opensource/debian-${DEBIAN_VERSION_NAME}-amd64/mender-artifact*.deb
     - test -x /usr/bin/mender-artifact
     - mender-artifact --version
-    - apt -y install ${CI_PROJECT_DIR}/output/opensource/debian-bookworm-amd64/mender-cli*.deb
+    - apt -y install ${CI_PROJECT_DIR}/output/opensource/debian-${DEBIAN_VERSION_NAME}-amd64/mender-cli*.deb
     - test -x /usr/bin/mender-cli
     - mender-cli --version
 
+test:pkgs:workstation-tools:bookworm:
+  extends: .test:pkgs:workstation-tools
+  variables:
+    DEBIAN_VERSION: 12
+    DEBIAN_VERSION_NAME: "bookworm"
+  needs:
+    - 'build:pkgs:workstation-tools: [crosscompile, debian, bookworm, amd64]'
+
 test:pkgs:workstation-tools:trixie:
-  stage: test
-  tags:
-    - hetzner-amd-beefy
+  extends: .test:pkgs:workstation-tools
+  variables:
+    DEBIAN_VERSION: 13
+    DEBIAN_VERSION_NAME: "trixie"
   needs:
     - 'build:pkgs:workstation-tools: [crosscompile, debian, trixie, amd64]'
-  rules:
-    - if: $CI_COMMIT_BRANCH == "production"
-      when: never
-    - if: '$TEST_MENDER_DIST_PACKAGES == "true" && $MENDER_VERSION =~ /^[456789]\.[0-9x]\.[0-9x]/'
-    - if: '$TEST_MENDER_DIST_PACKAGES == "true" && $MENDER_VERSION == "master"'
-  image: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/debian:13
-  script:
-    - apt-get update
-    - apt -y install ${CI_PROJECT_DIR}/output/opensource/debian-trixie-amd64/mender-artifact*.deb
-    - test -x /usr/bin/mender-artifact
-    - mender-artifact --version
-    - apt -y install ${CI_PROJECT_DIR}/output/opensource/debian-trixie-amd64/mender-cli*.deb
-    - test -x /usr/bin/mender-cli
-    - mender-cli --version
 
 .publish_helper_functions: &publish_helper_functions |
   # Bash function to check if the string is a final tag
